@@ -8,6 +8,7 @@
 * Added two options to constraints: propagation strength and reification variable.
 * Linear and simple relation constraints can now also be specified using #equal, #equal_to, #greater, #greater_than,... in addition to comparison operators.
 * Added distinct with offsets.
+* Simple relation constraints can now be used to specify relations between two variables.
 
 == Version 0.2.0
 
